--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "Weather app project",
   "main": "app.js",
   "scripts": {
-    "test": "jest"
+    "lint": "eslint .",
+    "test": "jest --passWithNoTests",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^27.0.0"
+    "jest": "^27.0.0",
+    "eslint": "^8.0.0",
+    "webpack": "^5.0.0",
+    "webpack-cli": "^4.0.0"
   }
 }
